--- a/portfolio.html
+++ b/portfolio.html
@@ -38,15 +38,15 @@
            <li class="filter"><button type="button">Маркетинг</button> </li>
        </ul> 
        <ul>
-             <li><a href=""> <img src="/images/note.jpg" alt="notebook" width="370" height="294"><h3>Технокряк</h3><p>Веб-сайт</p></a></li>
-             <li><a href=""> <img src="/images/basketball.jpg" alt="basketball" width="370" height="294"><h3>Постер New Orlean vs Golden Star</h3><p>Дизайн</p></a></li>
-             <li><a href=""> <img src="/images/restaurant.jpg" alt="restaurant" width="370" height="294"><h3>Ресторан Seafood</h3><p>Приложение</p></a></li>
-             <li><a href=""> <img src="/images/headphones.jpg" alt="headphones" width="370" height="294"><h3>Проект Prime</h3><p>Маркетинг</p></a></li>
-             <li><a href=""> <img src="/images/boxes.jpg" alt="boxes" width="370" height="294"><h3>Проект Boxes</h3><p>Приложение</p></a></li>
-             <li><a href=""> <img src="/images/monitor.jpg" alt="monitor" width="370" height="294"><h3>Inspiration has no Borders</h3><p>Веб-сайт</p></a></li>
-             <li><a href=""> <img src="/images/book.jpg" alt="book" width="370" height="294"><h3>Издание Limited Edition</h3><p>Дизайн</p></a></li>
-             <li><a href=""> <img src="/images/project.jpg" alt="project" width="370" height="294"><h3>Проект LAB</h3><p>Маркетинг</p></a></li>
-             <li><a href=""> <img src="/images/business.jpg" alt="business" width="370" height="294"><h3>Growing Business</h3><p>Приложение</p></a></li>
+             <li><a href=""> <img src="./images/note.jpg" alt="notebook" width="370" height="294"><h3>Технокряк</h3><p>Веб-сайт</p></a></li>
+             <li><a href=""> <img src="./images/basketball.jpg" alt="basketball" width="370" height="294"><h3>Постер New Orlean vs Golden Star</h3><p>Дизайн</p></a></li>
+             <li><a href=""> <img src="./images/restaurant.jpg" alt="restaurant" width="370" height="294"><h3>Ресторан Seafood</h3><p>Приложение</p></a></li>
+             <li><a href=""> <img src="./images/headphones.jpg" alt="headphones" width="370" height="294"><h3>Проект Prime</h3><p>Маркетинг</p></a></li>
+             <li><a href=""> <img src="./images/boxes.jpg" alt="boxes" width="370" height="294"><h3>Проект Boxes</h3><p>Приложение</p></a></li>
+             <li><a href=""> <img src="./images/monitor.jpg" alt="monitor" width="370" height="294"><h3>Inspiration has no Borders</h3><p>Веб-сайт</p></a></li>
+             <li><a href=""> <img src="./images/book.jpg" alt="book" width="370" height="294"><h3>Издание Limited Edition</h3><p>Дизайн</p></a></li>
+             <li><a href=""> <img src="./images/project.jpg" alt="project" width="370" height="294"><h3>Проект LAB</h3><p>Маркетинг</p></a></li>
+             <li><a href=""> <img src="./images/business.jpg" alt="business" width="370" height="294"><h3>Growing Business</h3><p>Приложение</p></a></li>
          </ul>
          </section>
     </main>
