--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
     <header class="header">
         <nav>
-        <a href="./"><span class="web">Web</span>Studio</a>
+        <a href="./" class="nav-a"><span class="web">Web</span>Studio</a>
         <ul>
-            <li><a href="./">Студия</a></li>
-            <li><a href="./portfolio.html">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+            <li class="nav-a"><a href="./">Студия</a></li>
+            <li class="nav-a"><a href="./portfolio.html">Портфолио</a></li>
+            <li class="nav-a"><a href="">Контакты</a></li>
         </ul>
         </nav>
         <div>
