--- a/portfolio.html
+++ b/portfolio.html
@@ -6,20 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
 </head>
 <body>
+
     <!-- header -->
+
     <header class="header">
         <nav>
-        <a href="./"><span class="web">Web</span>Studio</a>
-        <ul>
+        <a href="./" class="logo"><span class="web">Web</span>Studio</a>
+        <ul class="navigation">
             <li><a href="./">Студия</a></li>
             <li><a href="./portfolio.html">Портфолио</a></li>
             <li><a href="">Контакты</a></li>
         </ul>
         </nav>
         <div>
-            <ul>
+            <ul class="navigation">
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
             <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
