--- a/portfolio.html
+++ b/portfolio.html
@@ -15,18 +15,18 @@
     <!-- header -->
 
     <header class="header">
-        <nav>
-        <a href="./" class="logo"><span class="web">Web</span>Studio</a>
-        <ul class="navigation">
-            <li class="link"><a href="./">Студия</a></li>
-            <li class="link"><a href="./portfolio.html">Портфолио</a></li>
-            <li class="link"><a href="">Контакты</a></li>
-        </ul>
+        <nav class="navigation">
+            <a href="./" class="logo"><span class="web">Web</span>Studio</a>
+             <ul class="navigation-links">
+                 <li class="link"><a href="./">Студия</a></li>
+                 <li class="link"><a href="./portfolio.html">Портфолио</a></li>
+                 <li class="link"><a href="">Контакты</a></li>
+             </ul>
         </nav>
         <div>
-            <ul class="navigation">
-            <li class="link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="link"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="contact">
+                 <li class="link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="link"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
