--- a/index.html
+++ b/index.html
@@ -12,41 +12,55 @@
 </head>
 <body>
     <header class="header">
-        <nav>
-        <a href="./" class="nav-a"><span class="web">Web</span>Studio</a>
-        <ul>
-            <li class="nav-a"><a href="./">Студия</a></li>
-            <li class="nav-a"><a href="./portfolio.html">Портфолио</a></li>
-            <li class="nav-a"><a href="">Контакты</a></li>
-        </ul>
+        <nav class="navigation">
+            <a href="./" class="logo"><span class="web">Web</span>Studio</a>
+            <ul class="navigation-links">
+                <li class="link"><a href="./">Студия</a></li>
+                <li class="link"><a href="./portfolio.html">Портфолио</a></li>
+                <li class="link"><a href="">Контакты</a></li>
+            </ul>
         </nav>
         <div>
-            <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <ul class="contact">
+                <li class="link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                <li class="link"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
     <main>
+
+        <!-- HERO -->
+
         <section>
-            <h1>Эффективные решения для вашего бизнеса</h1>
+            <h1>ЭФФЕКТИВНЫЕ РЕШЕНИЯ ДЛЯ ВАШЕГО БИЗНЕСА</h1>
             <button type="button">Заказать услугу</button>
         </section>
+
+        <!-- ABOUT -->
+
         <section>
             <ul>
-                <li> <h3>Внимание к деталям</h3>
+                <li>
+                    <h3>ВНИМАНИЕ К ДЕТАЛЯМ</h3>
                     <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                 </li>
-                <li><h3>Пунктуальность</h3><p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> 
+                <li>
+                    <h3>ПУНКТУАЛЬНОСТЬ</h3>
+                    <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p> 
                 </li>
-                <li><h3>Планирование</h3>
-                <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
+                <li>
+                    <h3>ПЛАНИРОВАНИЕ</h3>
+                     <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                 </li>
-                <li><h3>Современные технологии</h3>
-                <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+                <li>
+                    <h3>СОВРЕМЕННЫЕ ТЕХНОЛОГИИ</h3>
+                      <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                 </li>
             </ul>
         </section>
+
+        <!-- WORK -->
+
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
@@ -55,6 +69,9 @@
                 <li><img src="./images/box-3.jpg" alt="выбор цвета в цветовой палитре" width="370" height="294"></li>
             </ul>
         </section>
+
+        <!-- TEAM -->
+
         <section>
             <h2>Наша команда</h2>
             <ul>
@@ -79,6 +96,9 @@
             </ul>
         </section>
     </main>
+
+    <!-- FOTTER -->
+
     <footer class="footer">
         <a href="./"><span class="web">Web</span>Studio</a>
         <address><p>г. Киев, пр-т Леси Украинки, 26</p>
