--- a/portfolio.html
+++ b/portfolio.html
@@ -58,7 +58,7 @@
 
 <!-- footer -->
     <footer class="footer">
-        <a href="./"><span class="web">Web</span>Studio</a>
+        <a href="./" class="logo"><span class="web">Web</span>Studio</a>
         <address><p>г. Киев, пр-т Леси Украинки, 26</p>
         <ul>
             <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
