--- a/portfolio.html
+++ b/portfolio.html
@@ -16,17 +16,18 @@
 
     <header class="header">
         <nav class="navigation">
-            <a href="./" class="logo"><span class="web">Web</span>Studio</a>
-             <ul class="navigation-links">
-                 <li class="link"><a href="./">Студия</a></li>
-                 <li class="link"><a href="./portfolio.html">Портфолио</a></li>
-                 <li class="link"><a href="">Контакты</a></li>
+            <a href="./" class="logo">Web<span class="web">Studio</span></a>
+             <ul class="site-nav">
+                <li><a href="./" class="link" >Студия</a></li>
+                <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+                <li><a href=""  class="link">Контакты</a></li>
              </ul>
         </nav>
+
         <div>
             <ul class="contact">
-                 <li class="link"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="link"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li><a href="mailto:info@devstudio.com"  class="link">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111"  class="link">+38 096 111 11 11</a></li>
             </ul>
         </div>
     </header>
@@ -58,14 +59,19 @@
 
 <!-- footer -->
     <footer class="footer">
-        <a href="./" class="logo"><span class="web">Web</span>Studio</a>
-        <address><p>г. Киев, пр-т Леси Украинки, 26</p>
-        <ul>
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-        </ul>
+        <a href="./" class="logo">Web<span class="web">Studio</span></a>
+            <address class="address">
+                 <p class="street">г. Киев, пр-т Леси Украинки, 26</p>
+                 <ul class="getcontact">
+                    <li>
+                        <a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a>
+                    </li>
+                    <li>
+                        <a href="tel:+380961111111" class="link">+38 096 111 11 11</a>
+                    </li>
+            </ul>
         </address>
-        
+    
     </footer>
 </body>
 </html>
