--- a/portfolio.html
+++ b/portfolio.html
@@ -36,25 +36,74 @@
    
     <main>
         <section>
-       <ul>
-           <li class="filter"><button type="button">Все</button></li>
-           <li class="filter"><button type="button">Веб-сайты</button></li>
-           <li class="filter"><button type="button">Приложения</button> </li>
-           <li class="filter"><button type="button">Дизайн</button> </li>
-           <li class="filter"><button type="button">Маркетинг</button> </li>
-       </ul> 
-       <ul>
-             <li><a href=""> <img src="./images/note.jpg" alt="notebook" width="370" height="294"><h3>Технокряк</h3><p>Веб-сайт</p></a></li>
-             <li><a href=""> <img src="./images/basketball.jpg" alt="basketball" width="370" height="294"><h3>Постер New Orlean vs Golden Star</h3><p>Дизайн</p></a></li>
-             <li><a href=""> <img src="./images/restaurant.jpg" alt="restaurant" width="370" height="294"><h3>Ресторан Seafood</h3><p>Приложение</p></a></li>
-             <li><a href=""> <img src="./images/headphones.jpg" alt="headphones" width="370" height="294"><h3>Проект Prime</h3><p>Маркетинг</p></a></li>
-             <li><a href=""> <img src="./images/boxes.jpg" alt="boxes" width="370" height="294"><h3>Проект Boxes</h3><p>Приложение</p></a></li>
-             <li><a href=""> <img src="./images/monitor.jpg" alt="monitor" width="370" height="294"><h3>Inspiration has no Borders</h3><p>Веб-сайт</p></a></li>
-             <li><a href=""> <img src="./images/book.jpg" alt="book" width="370" height="294"><h3>Издание Limited Edition</h3><p>Дизайн</p></a></li>
-             <li><a href=""> <img src="./images/project.jpg" alt="project" width="370" height="294"><h3>Проект LAB</h3><p>Маркетинг</p></a></li>
-             <li><a href=""> <img src="./images/business.jpg" alt="business" width="370" height="294"><h3>Growing Business</h3><p>Приложение</p></a></li>
-         </ul>
-         </section>
+            <div class="filters">
+                <ul>
+                    <li><button class="btn" type="button">Все</button></li>
+                    <li><button class="btn" type="button">Веб-сайты</button></li>
+                    <li><button class="btn" type="button">Приложения</button> </li>
+                    <li><button class="btn" type="button">Дизайн</button> </li>
+                    <li><button class="btn" type="button">Маркетинг</button> </li>
+                </ul> 
+            </div>
+            <div class="projects">
+                 <ul>
+                     <li>
+                         <a href=""> <img src="./images/note.jpg" alt="notebook" width="370" height="294"  >
+                            <h3 class="title">Технокряк</h3>
+                            <p class="filter">Веб-сайт</p>
+                        </a>
+                    </li>
+                     <li>
+                         <a href=""> <img src="./images/basketball.jpg" alt="basketball" width="370" height="294"  >
+                            <h3 class="title">Постер New Orlean vs Golden Star</h3>
+                            <p class="filter">Дизайн</p>
+                        </a>
+                    </li>
+                     <li>
+                         <a href=""> <img src="./images/restaurant.jpg" alt="restaurant" width="370" height="294"  >
+                            <h3 class="title">Ресторан Seafood</h3>
+                            <p class="filter">Приложение</p>
+                        </a>
+                    </li>
+                     <li>
+                         <a href=""> <img src="./images/headphones.jpg" alt="headphones" width="370" height="294" >
+                            <h3 class="title">Проект Prime</h3>
+                            <p class="filter">Маркетинг</p>
+                        </a>
+                    </li>
+                     <li>
+                         <a href=""> <img src="./images/boxes.jpg" alt="boxes" width="370" height="294" >
+                            <h3 class="title">Проект Boxes</h3>
+                            <p class="filter">Приложение</p>
+                        </a>
+                    </li>
+                     <li>
+                         <a href=""> <img src="./images/monitor.jpg" alt="monitor" width="370" height="294" >
+                            <h3 class="title">Inspiration has no Borders</h3>
+                            <p class="filter">Веб-сайт</p>
+                        </a>
+                    </li>
+                     <li>
+                         <a href=""> <img src="./images/book.jpg" alt="book" width="370" height="294" >
+                            <h3 class="title">Издание Limited Edition</h3>
+                            <p class="filter">Дизайн</p>
+                        </a>
+                    </li>
+                     <li>
+                         <a href=""> <img src="./images/project.jpg" alt="project" width="370" height="294" >
+                            <h3 class="title">Проект LAB</h3>
+                            <p class="filter">Маркетинг</p>
+                        </a>
+                    </li>
+                     <li>
+                         <a href=""> <img src="./images/business.jpg" alt="business" width="370" height="294" >
+                            <h3 class="title">Growing Business</h3>
+                            <p class="filter">Приложение</p>
+                        </a>
+                    </li>
+                 </ul>
+            </div>
+        </section>
     </main>
 
 <!-- footer -->
