--- a/portfolio.html
+++ b/portfolio.html
@@ -48,55 +48,64 @@
             <div class="projects">
                  <ul>
                      <li>
-                         <a href=""> <img src="./images/note.jpg" alt="notebook" width="370" height="294"  >
+                        <a href="">
+                              <img src="./images/note.jpg" alt="notebook" width="370" height="294"  >
                             <h3 class="title">Технокряк</h3>
                             <p class="filter">Веб-сайт</p>
                         </a>
                     </li>
                      <li>
-                         <a href=""> <img src="./images/basketball.jpg" alt="basketball" width="370" height="294"  >
+                        <a href="">
+                              <img src="./images/basketball.jpg" alt="basketball" width="370" height="294"  >
                             <h3 class="title">Постер New Orlean vs Golden Star</h3>
                             <p class="filter">Дизайн</p>
                         </a>
                     </li>
                      <li>
-                         <a href=""> <img src="./images/restaurant.jpg" alt="restaurant" width="370" height="294"  >
+                        <a href="">
+                              <img src="./images/restaurant.jpg" alt="restaurant" width="370" height="294"  >
                             <h3 class="title">Ресторан Seafood</h3>
                             <p class="filter">Приложение</p>
                         </a>
                     </li>
                      <li>
-                         <a href=""> <img src="./images/headphones.jpg" alt="headphones" width="370" height="294" >
+                        <a href="">
+                              <img src="./images/headphones.jpg" alt="headphones" width="370" height="294" >
                             <h3 class="title">Проект Prime</h3>
                             <p class="filter">Маркетинг</p>
                         </a>
                     </li>
                      <li>
-                         <a href=""> <img src="./images/boxes.jpg" alt="boxes" width="370" height="294" >
+                        <a href="">
+                              <img src="./images/boxes.jpg" alt="boxes" width="370" height="294" >
                             <h3 class="title">Проект Boxes</h3>
                             <p class="filter">Приложение</p>
                         </a>
                     </li>
                      <li>
-                         <a href=""> <img src="./images/monitor.jpg" alt="monitor" width="370" height="294" >
+                        <a href="">
+                              <img src="./images/monitor.jpg" alt="monitor" width="370" height="294" >
                             <h3 class="title">Inspiration has no Borders</h3>
                             <p class="filter">Веб-сайт</p>
                         </a>
                     </li>
                      <li>
-                         <a href=""> <img src="./images/book.jpg" alt="book" width="370" height="294" >
+                        <a href="">
+                              <img src="./images/book.jpg" alt="book" width="370" height="294" >
                             <h3 class="title">Издание Limited Edition</h3>
                             <p class="filter">Дизайн</p>
                         </a>
                     </li>
                      <li>
-                         <a href=""> <img src="./images/project.jpg" alt="project" width="370" height="294" >
+                        <a href="">
+                              <img src="./images/project.jpg" alt="project" width="370" height="294" >
                             <h3 class="title">Проект LAB</h3>
                             <p class="filter">Маркетинг</p>
                         </a>
                     </li>
                      <li>
-                         <a href=""> <img src="./images/business.jpg" alt="business" width="370" height="294" >
+                        <a href="">
+                              <img src="./images/business.jpg" alt="business" width="370" height="294" >
                             <h3 class="title">Growing Business</h3>
                             <p class="filter">Приложение</p>
                         </a>
